--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body { 
+  overflow-x: hidden;
+}
+
+:root {
+  --primary-color: #16BAC5;
+  --dark-color: #18689A;
+  --secondary-color: #16C41E;
+  --accent-color: #5FBFF9;
+  --warning-color: #FFA929;
+  --error-color: #FF2929;
+  --white-color: #EFE9F4;
+  --black-color: #171D1C;
+}
+
+button {
+  transition: all 0.3s ease;
+  border: none;
+  cursor: pointer;
+}
+input {
+  border: none;
+  outline: none;
+}
+a {
+  transition: all 0.3s ease;
+  text-decoration: none;
+  cursor: pointer;
 }
